// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getMenuFromRoute normal 1`] = `
Array [
  Object {
    "component": "IndexPage",
    "layout": false,
    "menu": Object {
      "name": "首页",
    },
    "name": "首页",
    "path": "/",
  },
  Object {
    "component": "IndexPage",
    "icon": "testicon",
    "menu": Object {
      "icon": "testicon",
      "name": "欢迎",
    },
    "name": "欢迎",
    "path": "/welcome",
  },
  Object {
    "children": Array [
      Object {
        "component": "IndexPage",
        "layout": Object {
          "hideMenu": true,
        },
        "menu": Object {
          "name": "示例 1",
        },
        "name": "示例 1",
        "path": "/test/1",
      },
      Object {
        "component": "IndexPage",
        "icon": "testicon",
        "layout": Object {
          "hideNav": true,
        },
        "menu": Object {
          "icon": "testicon",
          "name": "示例 2",
        },
        "name": "示例 2",
        "path": "/test233",
      },
    ],
    "menu": Object {
      "name": "菜单示例",
    },
    "name": "菜单示例",
    "path": "/test",
    "routes": Array [
      Object {
        "component": "IndexPage",
        "layout": Object {
          "hideMenu": true,
        },
        "menu": Object {
          "name": "示例 1",
        },
        "path": "1",
      },
      Object {
        "component": "IndexPage",
        "layout": Object {
          "hideNav": true,
        },
        "menu": Object {
          "icon": "testicon",
          "name": "示例 2",
        },
        "path": "/test233",
      },
      Object {
        "component": "IndexPage",
        "path": "/test_hide",
      },
    ],
  },
  Object {
    "menu": Object {
      "name": "关于 Bigfish",
    },
    "name": "关于 Bigfish",
    "path": "https://bigfish.antfin-inc.com/",
  },
]
`;

exports[`getMenuFromRoute prefix 1`] = `
Array [
  Object {
    "component": "IndexPage",
    "menu": Object {},
    "name": "首页",
    "path": "#/$name/",
  },
  Object {
    "component": "IndexPage",
    "icon": "testicon",
    "layout": Object {
      "hideMenu": false,
    },
    "name": "欢迎",
    "path": "#/$name/welcome",
  },
  Object {
    "children": Array [
      Object {
        "component": "IndexPage",
        "name": "示例 1",
        "path": "#/$name/test/1",
      },
      Object {
        "component": "IndexPage",
        "icon": "testicon",
        "layout": Object {
          "hideNav": false,
        },
        "name": "示例 2",
        "path": "#/$name/test233",
      },
    ],
    "layout": Object {
      "hideNav": true,
    },
    "name": "菜单示例",
    "path": "#/$name/test",
    "routes": Array [
      Object {
        "component": "IndexPage",
        "name": "示例 1",
        "path": "1",
      },
      Object {
        "component": "IndexPage",
        "icon": "testicon",
        "layout": Object {
          "hideNav": false,
        },
        "name": "示例 2",
        "path": "/test233",
      },
      Object {
        "component": "IndexPage",
        "path": "/test_hide",
      },
    ],
  },
  Object {
    "name": "关于 Bigfish",
    "path": "https://bigfish.antfin-inc.com/",
  },
]
`;

exports[`getMenuFromRoute simple 1`] = `
Array [
  Object {
    "component": "IndexPage",
    "menu": Object {},
    "name": "首页",
    "path": "/",
  },
  Object {
    "component": "IndexPage",
    "icon": "testicon",
    "layout": Object {
      "hideMenu": false,
    },
    "name": "欢迎",
    "path": "/welcome",
  },
  Object {
    "children": Array [
      Object {
        "component": "IndexPage",
        "name": "示例 1",
        "path": "/test/1",
      },
      Object {
        "component": "IndexPage",
        "icon": "testicon",
        "layout": Object {
          "hideNav": false,
        },
        "name": "示例 2",
        "path": "/test233",
      },
    ],
    "layout": Object {
      "hideNav": true,
    },
    "name": "菜单示例",
    "path": "/test",
    "routes": Array [
      Object {
        "component": "IndexPage",
        "name": "示例 1",
        "path": "1",
      },
      Object {
        "component": "IndexPage",
        "icon": "testicon",
        "layout": Object {
          "hideNav": false,
        },
        "name": "示例 2",
        "path": "/test233",
      },
      Object {
        "component": "IndexPage",
        "path": "/test_hide",
      },
    ],
  },
  Object {
    "name": "关于 Bigfish",
    "path": "https://bigfish.antfin-inc.com/",
  },
]
`;
